UC#1 Create unit test